@@ -9,6 +9,7 @@ import android.util.Log;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
+import android.widget.ArrayAdapter;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
@@ -20,7 +21,6 @@ import org.cosmic.ide.dependency.resolver.api.Artifact;
 
 import java.util.List;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 import mod.hey.studios.build.BuildSettings;
 import mod.hey.studios.util.Helper;
@@ -61,6 +61,14 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
 
         binding.btnCancel.setOnClickListener(v -> dismiss());
         binding.btnDownload.setOnClickListener(v -> initDownloadFlow());
+
+        String[] options = new String[] {"21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32", "33", "34"};
+        ArrayAdapter<String> adapter = new ArrayAdapter<>(
+                requireContext(),
+                android.R.layout.simple_dropdown_item_1line,
+                options
+        );
+        binding.actChooseminapi.setAdapter(adapter);
     }
 
     public void setOnLibraryDownloadedTask(OnLibraryDownloadedTask onLibraryDownloadedTask) {
@@ -89,7 +97,8 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
         var group = parts[0];
         var artifact = parts[1];
         var version = parts[2];
-        var resolver = new DependencyResolver(group, artifact, version, binding.cbSkipSubdependencies.isChecked(), buildSettings);
+        //D8 default Min API Level is 1.
+        var resolver = new DependencyResolver(group, artifact, version, binding.cbSkipSubdependencies.isChecked(), buildSettings, Integer.parseInt(binding.actChooseminapi.getText().toString()));
         var handler = new Handler(Looper.getMainLooper());
 
         class SetTextRunnable implements Runnable {
@@ -118,11 +127,6 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
                 @Override
                 public void onResolutionComplete(@NonNull Artifact dep) {
                     handler.post(new SetTextRunnable("Dependency " + dep + " resolved"));
-                }
-
-                @Override
-                public void onArtifactFound(@NonNull Artifact dep) {
-                    handler.post(new SetTextRunnable("Found " + dep + " in " + dep.getRepository().getName()));
                 }
 
                 @Override
@@ -204,7 +208,7 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
                             var enabledLibs = gson.fromJson(fileContent, Helper.TYPE_MAP_LIST);
                             enabledLibs.addAll(dependencies.stream()
                                     .map(name -> createLibraryMap(name, dependencyName))
-                                    .collect(Collectors.toList()));
+                                    .toList());
                             FileUtil.writeFile(localLibFile, gson.toJson(enabledLibs));
                         }
                         if (getActivity() == null) return;
@@ -221,6 +225,7 @@ public class LibraryDownloaderDialogFragment extends BottomSheetDialogFragment {
         binding.btnDownload.setEnabled(!downloading);
         binding.dependencyInput.setEnabled(!downloading);
         binding.cbSkipSubdependencies.setEnabled(!downloading);
+        binding.actChooseminapi.setEnabled(!downloading);
         setCancelable(!downloading);
 
         if (!downloading) {
